Fix Add button positioning; Update README.md with project name - Add button inner "+" was not centred on mobile, change to position with flexbox - change project name from "virtual bookshelf" to "mybookshelf."; page name and README.md updated to reflect change

--- a/style_modern.scss
+++ b/style_modern.scss
@@ -16,6 +16,8 @@ html {
     font-family: 'Nunito', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    -webkit-appearance: none;
+    border-radius: 0;
     line-height: 1.6;
     font-size: 0;
 }
@@ -171,19 +173,19 @@ header {
 
 #button-div {
     width: 100%;
-    padding: 0 10px 10px;
-    display: inline-flex;
+    display: flex;
     justify-content: center;
+    align-items: center;
 
     #add-new-book {
         height: 50px;
         width: 50px;
         padding: 0;
         font-size: 30px;
+        line-height: 1;
         font-weight: 700;
         color: $light-color;
         background-color: $primary-color;
-        padding: 5px;
         border-radius: 50%;
         border: 1px solid $primary-color;
         z-index: 1;
@@ -240,18 +242,12 @@ form {
         input {
             margin: 0 0 10px;
             padding: 2px;
-            font-style: italic;
             border: 1.5px solid $primary-color;
             border-radius: 3px;
             
             &:hover, &:active, &:focus {
                 box-shadow: 0 0 5px 2px $light-color;        
             }
-
-            &:focus {
-                font-style: normal;
-            }
-
         }
 
         #read-checkbox {
